Added images for title screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Pokemon-Daws</string>
+    <string name="title_string">DAWSON EDITION</string>
 </resources>
