--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="new_game_string">NEW GAME</string>
     <string name="load_game_string">LOAD GAME</string>
     <string name="developer_credits_string">Raagav Prasanna, Aidan Catriel, Vinuyan Sivakolunthu</string>
+    <string name="name_pick_string">Trainer, please enter your name</string>
+    <string name="next_string">NEXT</string>
+    <string name="trainer_name_hint">Ash Ketchum</string>
 </resources>
