--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="change_team_button_string">CHANGE TEAM</string>
     <string name="save_button_string">SAVE GAME</string>
     <string name="enter_name_toast">Trainer please select a name</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fight">Fight</string>
+    <string name="item">Item</string>
+    <string name="pokemon">Pokemon</string>
+    <string name="run">Run</string>
 </resources>
