--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="item">Item</string>
     <string name="pokemon">Pokemon</string>
     <string name="run">Run</string>
+    <string name="potion">Potion</string>
+    <string name="pokeball">Pokeball</string>
 </resources>
