added recycler view for moves shown in fights

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="run">Run</string>
     <string name="potion">Potion</string>
     <string name="pokeball">Pokeball</string>
+    <string name="trainer_message_default">trainer_message</string>
+    <string name="opponent_message_default">opponent_message</string>
+    <string name="move_name_default">Move Name</string>
 </resources>
